--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main id="main">
       <h1 id="title">
         <span id="timer">Loading...</span>
+        <h2>jamesboy</h2>
       </h1>
     </main>
   </div>
